# owkin_test

./: README.rst  pyproject.toml
infra/: api.Dockerfile  worker.Dockerfile
owkin_test/: __init__.py  app.py  tasks.py  wsgi.py
tests/: conftest.py  docker-compose.yml  test_owkin_test.py
tests/data/: example.Dockerfile
