[tool.poetry]
name = "owkin-test"
version = "0.1.0"
description = ""
authors = ["Adrian <a.vandier@softlaw.digital>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = "^5.0.5"
flask = "^1.1.2"
docker = "^4.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pytest-datadir = "^1.3.1"
tenacity = "^6.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
